--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -56,7 +56,7 @@ tasks:
           cleaned_name=$(echo "$cleaned_key" | cut -c5- | sed 's/_/./g' )
           value=$(jq -n env | jq ".$cleaned_key")
           cleaned_value=$(printf "$(echo ${value:1:-1})")
-          kubectl create secret generic "$cleaned_name" --from-literal=value="$cleaned_value" --dry-run=client -o yaml | kubectl apply -f -
+          kubectl --kubeconfig=$HOME/.kube/config create secret generic "$cleaned_name" --from-literal=value="$cleaned_value" --dry-run=client -o yaml | kubectl --kubeconfig=$HOME/.kube/config apply -f -
         done
 
   deploy:
@@ -73,4 +73,4 @@ tasks:
           ARGS="--values ./values/shared.yaml --values ./values/dev.yaml"
         fi
 
-        helm upgrade bingus . $ARGS --dependency-update && echo 'Updated!' || helm install bingus . $ARGS --dependency-update
+        helm --kubeconfig=$HOME/.kube/config upgrade bingus . $ARGS --dependency-update && echo 'Updated!' || helm --kubeconfig=$HOME/.kube/config install bingus . $ARGS --dependency-update
