--- a/config/nginx/conf.d/obsync.conf
+++ b/config/nginx/conf.d/obsync.conf
@@ -2,7 +2,7 @@ server {
   listen 443 ssl;
   include https.conf;
 
-  server_name couch.*;
+  server_name obsync.*;
 
   fastcgi_buffers 16 16k;
   fastcgi_buffer_size 32k;
