--- a/.gitea/workflows/deploy.yaml
+++ b/.gitea/workflows/deploy.yaml
@@ -93,3 +93,4 @@ jobs:
           k8s_immich_db_password: ${{ secrets.K8S_IMMICH_DB_PASSWORD }}
           k8s_mealie_db_password: ${{ secrets.K8S_MEALIE_DB_PASSWORD }}
           k8s_borgmatic_borgbase_key: ${{ secrets.K8S_BORGMATIC_BORGBASE_KEY }}
+          k8s_couchdb_admin_password: ${{ secrets.K8S_COUCHDB_ADMIN_PASSWORD }}
