--- a/templates/couchdb/depl.yaml
+++ b/templates/couchdb/depl.yaml
@@ -27,6 +27,13 @@ spec:
           env:
             - name: COUCHDB_USER
               value: admin
+
+            - name: COUCHDB_REQUIRE_VALID_USER
+              value: "true"
+
+            - name: COUCHDB_SINGLE_NODE
+              value: "true"
+
             - name: COUCHDB_PASSWORD
               valueFrom:
                 secretKeyRef:
