u/kwkaiser/kasm-web (#200)
Reviewed-on: http://gitea/kwkaiser/homelab-application/pulls/200
Co-authored-by: Karl Kaiser <karl@kwkaiser.io>
Co-committed-by: Karl Kaiser <karl@kwkaiser.io>

--- a/templates/vpn/depl.yaml
+++ b/templates/vpn/depl.yaml
@@ -142,3 +142,12 @@ spec:
               mountPath: /config/config.js
               subPath: config.js
               readOnly: false
+      
+        - name: chrome
+            image: {{ .Values.image_kasm }}
+            ports:
+              - containerPort: 6901
+
+            env:
+              - name: VNC_PW
+                value: foo
