--- a/values/shared.yaml
+++ b/values/shared.yaml
@@ -31,5 +31,4 @@ image_immich_server: "ghcr.io/immich-app/immich-server:v1.130.3"
 image_mealie_db: "postgres:16.4-alpine3.19"
 image_mealie: "hkotel/mealie:v2.4.2"
 image_minecraft: "itzg/minecraft-server:latest"
-image_couchdb: "couchdb:3.4.2"
-
+image_kasm: "kasmweb/chrome:1.14.0"
