--- a/templates/vpn/depl.yaml
+++ b/templates/vpn/depl.yaml
@@ -150,7 +150,7 @@ spec:
 
           env:
             - name: VNC_PW
-              value: foo
+              value: foobarbaz
 
           resources:
             requests:
