--- a/.gitea/workflows/deploy.yaml
+++ b/.gitea/workflows/deploy.yaml
@@ -28,7 +28,9 @@ jobs:
           cp kubeconform /usr/local/bin
 
       - name: Install taskfile
-        run: sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d
+        run: |
+          sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d
+          echo $(ls -la)
 
       - name: Lint helm chart
         run: ./bin/task lint --yes
