--- a/.gitea/workflows/deploy.yaml
+++ b/.gitea/workflows/deploy.yaml
@@ -35,7 +35,7 @@ jobs:
           rm -rf ./bin
 
       - name: Lint helm chart
-        run: ./bin/task lint --yes
+        run: task lint --yes
 
   release:
     name: Release
@@ -65,7 +65,7 @@ jobs:
       - name: Install taskfile
         run: |
           sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d
-          install -o root -g root -m 0755 ./bin/task /usr/local/bin/task
+          install -o root -g root -m 0755 bin/task /usr/local/bin/task
           rm -rf ./bin
 
       - name: Run helm command
