--- a/config/borgmatic/config.yaml
+++ b/config/borgmatic/config.yaml
@@ -48,8 +48,8 @@ keep_monthly: 1
 
 # Repos
 repositories:
-  - path: /raw-backup
-    label: local
+  # - path: /raw-backup
+  #   label: local
 
   - path: ssh://gyd00bnt@gyd00bnt.repo.borgbase.com/./repo
     label: borgbase
