--- a/config/borgmatic/config.yaml
+++ b/config/borgmatic/config.yaml
@@ -60,7 +60,7 @@ ssh_command: ssh -v -o StrictHostKeyChecking=no -i /borgmatic-borgbase-key-2
 
 extra_borg_options:
   create: --progress --stats
-  prune: --match-archives '*' --stats
+  prune: --stats
   compact: --progress
   check: --progress
 
@@ -82,7 +82,7 @@ before_check:
 
 after_check:
   - echo 'Ended checks'
-  - borgmatic prune
+  - borgmatic prune --match-archives '*'
 
 before_prune:
   - echo 'Starting prune'
