--- a/.gitea/workflows/deploy.yaml
+++ b/.gitea/workflows/deploy.yaml
@@ -15,9 +15,9 @@ jobs:
 
       - name: Install helm
         run: |
-          curl https://baltocdn.com/helm/signing.asc | gpg --dearmor | tee /usr/share/keyrings/helm.gpg > /dev/null
-          apt-get install apt-transport-https --yes
-          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/helm.gpg] https://baltocdn.com/helm/stable/debian/ all main" | tee /etc/apt/sources.list.d/helm-stable-debian.list
+          apt-get install curl gpg apt-transport-https --yes
+          curl -fsSL https://packages.buildkite.com/helm-linux/helm-debian/gpgkey | gpg --dearmor | sudo tee /usr/share/keyrings/helm.gpg > /dev/null
+          echo "deb [signed-by=/usr/share/keyrings/helm.gpg] https://packages.buildkite.com/helm-linux/helm-debian/any/ any main" | sudo tee /etc/apt/sources.list.d/helm-stable-debian.list
           apt-get update
           apt-get install helm
 
@@ -41,7 +41,7 @@ jobs:
     name: Release
     needs: code-quality
     runs-on: ubuntu-latest
-    steps: 
+    steps:
       - name: Checkout
         uses: actions/checkout@v3
 
@@ -74,7 +74,7 @@ jobs:
           echo $KUBE_CONFIG > $HOME/.kube/config
           task deploy -y
         env:
-          MODE: 'prod'
+          MODE: "prod"
           KUBECONFIG: $HOME/.kube/config
           KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
           k8s_nginx_certificate: ${{ secrets.K8S_NGINX_CERTIFICATE }}
