--- a/.gitea/workflows/pr.yaml
+++ b/.gitea/workflows/pr.yaml
@@ -3,7 +3,7 @@ name: Pull request
 on:
   pull_request_target:
     branches:
-      - '**'
+      - "**"
 
 jobs:
   code-quality:
@@ -15,9 +15,9 @@ jobs:
 
       - name: Install helm
         run: |
-          curl https://baltocdn.com/helm/signing.asc | gpg --dearmor | tee /usr/share/keyrings/helm.gpg > /dev/null
-          apt-get install apt-transport-https --yes
-          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/helm.gpg] https://baltocdn.com/helm/stable/debian/ all main" | tee /etc/apt/sources.list.d/helm-stable-debian.list
+          apt-get install curl gpg apt-transport-https --yes
+          curl -fsSL https://packages.buildkite.com/helm-linux/helm-debian/gpgkey | gpg --dearmor | sudo tee /usr/share/keyrings/helm.gpg > /dev/null
+          echo "deb [signed-by=/usr/share/keyrings/helm.gpg] https://packages.buildkite.com/helm-linux/helm-debian/any/ any main" | sudo tee /etc/apt/sources.list.d/helm-stable-debian.list
           apt-get update
           apt-get install helm
 
@@ -35,4 +35,4 @@ jobs:
           rm -rf ./bin
 
       - name: Lint helm chart
-        run: task lint --yes 
+        run: task lint --yes
