--- a/templates/n8n/depl.yaml
+++ b/templates/n8n/depl.yaml
@@ -20,6 +20,22 @@ spec:
           persistentVolumeClaim:
             claimName: bulk-nfs
 
+      initContainers:
+        - name: fix-permissions
+          image: busybox
+          command:
+            [
+              "sh",
+              "-c",
+              "chown -R 1000:1000 /home/node/.n8n && chmod -R 755 /home/node/.n8n",
+            ]
+          volumeMounts:
+            - name: data
+              mountPath: /home/node/.n8n
+              subPath: application/n8n/data
+          securityContext:
+            runAsUser: 0 # Run as root to change ownership
+
       containers:
         - name: n8n
           image: {{ .Values.image_n8n }}
@@ -80,6 +96,11 @@ spec:
             - name: data
               mountPath: /home/node/.n8n
               subPath: application/n8n/data
+
+          securityContext:
+            runAsUser: 1000
+            runAsGroup: 1000
+            fsGroup: 1000
 
           livenessProbe:
             httpGet:
