--- a/templates/n8n/depl.yaml
+++ b/templates/n8n/depl.yaml
@@ -15,6 +15,11 @@ spec:
         app: n8n
         app.kubernetes.io/name: n8n
     spec:
+      securityContext:
+        runAsUser: 0
+        runAsGroup: 0
+        fsGroup: 0
+
       volumes:
         - name: data
           persistentVolumeClaim:
@@ -80,10 +85,6 @@ spec:
             - name: data
               mountPath: /home/node/.n8n
               subPath: application/n8n/data
-
-          securityContext:
-            runAsUser: 0
-            runAsGroup: 0
 
           livenessProbe:
             httpGet:
