--- a/templates/n8n/depl.yaml
+++ b/templates/n8n/depl.yaml
@@ -1,8 +1,6 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  annotations:
-    secret.reloader.stakater.com/reload: "n8n.oidc.client.secret"
   name: n8n
 spec:
   selector:
@@ -59,27 +57,11 @@ spec:
             - name: N8N_SECURE_COOKIE
               value: "true"
 
-            # OIDC Configuration
-            - name: N8N_SSO_OIDC_ENABLED
-              value: "true"
+            - name: PUID
+              value: "0"
 
-            - name: N8N_SSO_OIDC_ISSUER
-              value: "https://auth.{{ .Values.domainName }}.{{ .Values.tld }}"
-
-            - name: N8N_SSO_OIDC_CLIENT_ID
-              value: "n8n"
-
-            - name: N8N_SSO_OIDC_CLIENT_SECRET
-              valueFrom:
-                secretKeyRef:
-                  name: n8n.oidc.client.secret
-                  key: value
-
-            - name: N8N_SSO_OIDC_REDIRECT_URL
-              value: "https://workflows.{{ .Values.domainName }}.{{ .Values.tld }}/rest/sso/oidc/callback"
-
-            - name: N8N_SSO_OIDC_SCOPE
-              value: "openid profile email"
+            - name: PGID
+              value: "0"
 
           volumeMounts:
             - name: data
