--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -8,36 +8,6 @@ tasks:
       - sudo ssh -g -L 80:localhost:6880 -f -N kwkaiser@localhost
       - sudo ssh -g -L 443:localhost:6840 -f -N kwkaiser@localhost
 
-  # # Util
-  # helm-status:
-  #   desc: "Check Helm release status and pending operations"
-  #   cmds:
-  #     - |
-  #       echo "=== Helm Releases (all states) ==="
-  #       helm --kubeconfig {{.KUBECONFIG}} list -a
-  #       echo ""
-  #       echo "=== Checking for stuck operations ==="
-  #       helm --kubeconfig {{.KUBECONFIG}} list -a --pending
-  #       echo ""
-  #       echo "=== Bingus release history ==="
-  #       helm --kubeconfig {{.KUBECONFIG}} history bingus 2>/dev/null || echo "No history found for 'bingus'"
-
-  # helm-cleanup:
-  #   desc: "Clean up stuck Helm operations"
-  #   prompt: "This will rollback any pending operations. Continue?"
-  #   cmds:
-  #     - |
-  #       echo "=== Rolling back stuck operations ==="
-  #       if helm --kubeconfig {{.KUBECONFIG}} list -a --pending | grep -q bingus; then
-  #         echo "Found pending operation for 'bingus', rolling back..."
-  #         helm --kubeconfig {{.KUBECONFIG}} rollback bingus 0
-  #       else
-  #         echo "No pending operations found for 'bingus'"
-  #       fi
-
-  #       echo "=== Current status after cleanup ==="
-  #       helm --kubeconfig {{.KUBECONFIG}} list -a | grep bingus || echo "No 'bingus' release found"
-
   template:
     desc: "Builds helm template"
     prompt: "Did you set the MODE envar to dev | prod? (Defaults to: dev)"
@@ -96,19 +66,4 @@ tasks:
           ARGS="--values ./values/shared.yaml --values ./values/dev.yaml"
         fi
 
-        # Check if the bingus release exists (including failed/pending states)
-        if helm --kubeconfig {{.KUBECONFIG}} list -a -q | grep -q "^bingus$"; then
-          echo "Release 'bingus' exists (in any state), upgrading..."
-          helm --kubeconfig {{.KUBECONFIG}} upgrade bingus . $ARGS --dependency-update --wait
-          echo 'Updated!'
-        else
-          echo "Release 'bingus' does not exist, installing..."
-          # Try install first, if it fails due to name conflict, try upgrade instead
-          if ! helm --kubeconfig {{.KUBECONFIG}} install bingus . $ARGS --dependency-update --wait; then
-            echo "Install failed (likely name conflict), attempting upgrade instead..."
-            helm --kubeconfig {{.KUBECONFIG}} upgrade bingus . $ARGS --dependency-update --wait
-            echo 'Updated!'
-          else
-            echo 'Installed!'
-          fi
-        fi
+        helm --kubeconfig {{.KUBECONFIG}} upgrade bingus . $ARGS --install --dependency-update
