--- a/templates/openldap/app/depl.yaml
+++ b/templates/openldap/app/depl.yaml
@@ -39,6 +39,9 @@ spec:
             - name: LDAP_ADMINS_GROUP
               value: admins
 
+            - name: ACCEPT_WEAK_PASSWORDS
+              value: "true"
+
             - name: LDAP_ADMIN_BIND_PWD
               valueFrom:
                 secretKeyRef:
