--- a/Chart.yaml
+++ b/Chart.yaml
@@ -3,8 +3,18 @@ name: homelab
 description: Chart for deploying homelab / my server infra
 type: application
 version: 0.1.0
-appVersion: '1.16.0'
+appVersion: "1.16.0"
 dependencies:
   - name: reloader
-    version: '2.2.5'
+    version: "2.2.5"
     repository: https://stakater.github.io/stakater-charts
+
+  # Storage (NFS volumes)
+  - name: storage
+    version: "0.1.0"
+    repository: file://./helmcharts/storage
+
+  # Core infrastructure (Nginx, Authelia, OpenLDAP)
+  - name: core
+    version: "0.1.0"
+    repository: file://./helmcharts/core
