--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -10,10 +10,10 @@ tasks:
 
   template:
     desc: "Builds helm template"
-    prompt: "Did you set the MODE envar to dev | prod? (Defaults to: dev)"
     cmds:
       - |
         DEPL_ENV="${MODE:-dev}"
+        rm -f template.yaml
         helm dependency build
         helm template . --values ./values/shared.yaml --values ./values/$DEPL_ENV.yaml > template.yaml
 
@@ -21,16 +21,16 @@ tasks:
     desc: "Lint generated template"
     deps: [template]
     cmds:
-      - helm lint .
+      - |
+        DEPL_ENV="${MODE:-dev}"
+        helm lint . --values ./values/shared.yaml --values ./values/$DEPL_ENV.yaml
       - cat template.yaml | kubeconform
 
   # Local and prod
   apply-secrets:
     desc: "Creates or updates secrets in the cluster"
-    prompt: "Did you set the MODE envar to dev | prod? (Defaults to: dev)"
     cmds:
       - |
-        # Assume non prod-like
         DEPL_ENV="${MODE:-dev}"
 
         # If local, load secrets from defaults
@@ -49,13 +49,12 @@ tasks:
           cleaned_name=$(echo "$cleaned_key" | cut -c5- | sed 's/_/./g' )
           value=$(jq -n env | jq ".$cleaned_key")
           cleaned_value=$(printf "$(echo ${value:1:-1})")
-          kubectl --kubeconfig {{.KUBECONFIG}} create secret generic "$cleaned_name" --from-literal=value="$cleaned_value" --dry-run=client -o yaml | kubectl --kubeconfig {{.KUBECONFIG}} apply -f -
+          kubectl create secret generic "$cleaned_name" --from-literal=value="$cleaned_value" --dry-run=client -o yaml | kubectl apply -f -
         done
 
   deploy:
     desc: "Redeploys k8s template"
     deps: [apply-secrets]
-    prompt: "Did you set the MODE envar to dev | prod? (Defaults to: dev)"
     cmds:
       - |
         DEPL_ENV="${MODE:-dev}"
@@ -66,4 +65,4 @@ tasks:
           ARGS="--values ./values/shared.yaml --values ./values/dev.yaml"
         fi
 
-        helm --kubeconfig {{.KUBECONFIG}} upgrade bingus . $ARGS --install --dependency-update
+        helm upgrade bingus . $ARGS --install --dependency-update
