--- a/templates/mealie/depl.yaml
+++ b/templates/mealie/depl.yaml
@@ -34,7 +34,7 @@ spec:
               value: "false"
 
             - name: BASE_URL
-              value: food.{{ .Values.domainName }}.{{ .Values.tld }}
+              value: food.{{ .Values.global.domainName }}.{{ .Values.global.tld }}
 
             - name: DB_ENGINE
               value: postgres
