--- a/.gitea/workflows/deploy.yaml
+++ b/.gitea/workflows/deploy.yaml
@@ -25,6 +25,7 @@ jobs:
           mkdir $HOME/.kube
           echo "$KUBE_CONFIG" > $HOME/.kube/config
           kubectl get pods
+          helm list
         env:
           KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
 
