u/kwkaiser/fractionalized-deploys-2 (#262)
Reviewed-on: http://gitea/kwkaiser/homelab-application/pulls/262
Co-authored-by: karl@kwkaiser.io <karl@kwkaiser.io>
Co-committed-by: karl@kwkaiser.io <karl@kwkaiser.io>

--- a/Chart.yaml
+++ b/Chart.yaml
@@ -13,8 +13,16 @@ dependencies:
   - name: storage
     version: "0.1.0"
     repository: file://./helmcharts/storage
+    condition: storage.enabled
 
   # Core infrastructure (Nginx, Authelia, OpenLDAP)
   - name: core
     version: "0.1.0"
     repository: file://./helmcharts/core
+    condition: core.enabled
+
+  # Gitea (Git service, database, renovate, runner)
+  - name: gitea
+    version: "0.1.0"
+    repository: file://./helmcharts/gitea
+    condition: gitea.enabled
