split out immich, rm duplicates (#263)
Reviewed-on: http://gitea/kwkaiser/homelab-application/pulls/263
Co-authored-by: karl@kwkaiser.io <karl@kwkaiser.io>
Co-committed-by: karl@kwkaiser.io <karl@kwkaiser.io>

--- a/Chart.yaml
+++ b/Chart.yaml
@@ -26,3 +26,9 @@ dependencies:
     version: "0.1.0"
     repository: file://./helmcharts/gitea
     condition: gitea.enabled
+
+  # Immich (Photo management, database, redis, ML)
+  - name: immich
+    version: "0.1.0"
+    repository: file://./helmcharts/immich
+    condition: immich.enabled
