--- a/Chart.yaml
+++ b/Chart.yaml
@@ -32,3 +32,9 @@ dependencies:
     version: "0.1.0"
     repository: file://./helmcharts/immich
     condition: immich.enabled
+
+  # Mealie (Recipe management, database)
+  - name: mealie
+    version: "0.1.0"
+    repository: file://./helmcharts/mealie
+    condition: mealie.enabled
