split out miniflux

--- a/Chart.yaml
+++ b/Chart.yaml
@@ -38,3 +38,9 @@ dependencies:
     version: "0.1.0"
     repository: file://./helmcharts/mealie
     condition: mealie.enabled
+
+  # Miniflux (RSS reader, database)
+  - name: miniflux
+    version: "0.1.0"
+    repository: file://./helmcharts/miniflux
+    condition: miniflux.enabled
